# PyOthello

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml
src/: Othello.cpp  OthelloSolver.cpp  PyOthello.cpp
src/headers/: Othello.hpp  OthelloSolver.hpp
